# whoop-mcp

./: .gitignore  README.md  pyproject.toml
scripts/: get_tokens.py
src/whoop_mcp/: __init__.py  __main__.py  client.py  models.py  server.py
